Revise README for improved clarity and detail
Updated the README to enhance clarity and detail about the FFmpeg Pro Tool features, usage, and requirements.